featured section complete

--- a/index.html
+++ b/index.html
@@ -206,6 +206,18 @@
             <p class="see-more">See More  <i class="fa-solid fa-arrow-right"></i></p>
         </section>
          <!-- popular collection section end -->
+         <!-- featured section start  -->
+         <section class="featured-container">
+            <div class="featured-content">
+                <img class="featured-content-img" src="images/gear.png" alt="">
+            </div>
+            <div class="featured-content">
+                <h1 class="featured-title">Featured products at one place</h1>
+                <p class="featured-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br> do amet sint. Velit officia consequat duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="featured-btn"><p>Join Now     <i class="fa-solid fa-arrow-right"></i></p></button>
+            </div>
+         </section>
+          <!-- featured section end  -->
     </main>
     <footer>
 
